# GraduationDesign

./: .gitignore  Cargo.toml  GraduationDesign.ipynb  README.md  SSH-KeyGen.sh  SSHwifty.yml  Test Plan.jmx  UpgradePip.py  manager.py  requirements.txt
SSH-Wifty/: SSH-KeyGen.sh  SSHwifty.yml
SSH-Wifty/sshwifty/: sshwifty.conf.json  sshwifty.conf.json.example
deep_learning_service/: manage.py
deep_learning_service/deep_learning_service/: asgi.py  settings.py  urls.py  wsgi.py
deep_learning_service/dl_svc/: apis.py  urls.py
dl_svc/: CoCaManager.py  config.py  datasetloader.py  ds_cfg.json  manager.py  requirements.txt  train_config.py
dl_svc/COCA/: coca_model.py  coca_vit_custom.py  multimodal_decoder.py  text_decoder.py
dl_svc/CoCa/: coca_model.py  coca_vit_custom.py  multimodal_decoder.py  text_decoder.py
dl_svc/CoCaProcedures/: compile_model.py  train.py
dl_svc/DataProcess/: datasetloader.py  generate_dataset.py  text_processor.py
dl_svc/Encoder/: vision_transformer.py
dl_svc/Layers/: attention_pooler.py  mlp.py  multi_head_attention.py  normalizations.py  patch_embedding.py  transformer.py
dl_svc/Loss/: CoCa_loss.py  contrastive_loss_with_temperature.py
dl_svc/Masking/: random_masking.py
dl_svc/ModelTransfer/: Classifier.py  QuantModel.py
dl_svc/TransferProcedures/: compile_model.py  compile_utils.py  infer_by_tvm.py  infer_et_test.py  quantize_model.py  train.py
dl_svc/Utils/: attention.py  common.py  distributed.py  early_stop.py  file_io.py  random_seed.py
dl_svc/default/: cfg.ini
dl_svc/procedures/: compile_model.py  infer_et_test.py  infer_et_valid.py  prune_model.py  train.py
front_end/: next.config.mjs  package-lock.json  package.json
front_end/app/: Agent.tsx  Types.ts  Utils.tsx  layout.tsx  page.tsx
front_end/app/Componets/: ContentPanel.tsx  FileManage.tsx  NavBar.tsx  ResultPagePanel.tsx  UploadImage.tsx
front_end/app/Componets/Buttons/: SignInButton.tsx  SignOutButton.tsx  SignUpButton.tsx
front_end/app/Componets/FormButtons/: SignInButton.tsx  SignOutButton.tsx  SignUpButton.tsx
front_end/app/Pages/: Common.tsx  ContentPanel.tsx  ModelAdmin.tsx  UserAdmin.tsx  UserInfo.tsx
front_end/app/Pages/SubPages/: Commands.tsx  Common.tsx  FeedbackManage.tsx  LabelData.tsx  ModelManage.tsx  UserInfo.tsx  UserManage.tsx  WebSSH.tsx  commands.json
frontend_nextjs/: package-lock.json  package.json
src/: authenticator.rs  cache.rs  config.rs  custom_hash_map.rs  daemon.rs  dl_svc.rs  doc_database.rs  feedback.rs  io_agent.rs  io_cache.rs  main.rs  model_manager.rs  postgresql.rs  species_vector.rs  user_manager.rs
src/init_proj/: init.rs
src/ssh_socket/: server.rs
tvm_make_config/: config.cmake
