[package]
name = "insects-identifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "init"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"]}
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
postgres = "0.19.7"
deadpool = "0.10.0"
deadpool-postgres = "0.12.1"
deadpool-redis = "0.14.0"
tokio-postgres = "0.7.10"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"

jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

pbkdf2 = "0.12.2"
data-encoding = "2.5.0"
ring = "0.17.8"

headers = "0.4.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = "0.4.35"

# bb8 = "0.8.3"
# bb8-postgres = "0.8.1"
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# parking_lot = "0.12.1"

# actix-web = "4"
# actix-rt = "2.9.0"
# deadpool-postgres="0.12.1"
# tokio-postgres="0.7.10"