[package]
name = "insects-identifier"
version = "0.1.0"
edition = "2021"
default-run="insects-identifier"

[[bin]] # Initialization of the project
name = "init"
path = "src/init_proj/init.rs"

# [[bin]] # SSH Connection based on WebSocket
# name = "ssh_socket"
# path = "src/ssh_socket/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

# axum-macros = "0.4.1" ## For debugging handler function
axum = { version = "0.7.4", features = ["ws", "multipart"]}
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
# tower = "0.4.13"
postgres = "0.19.7"
# deadpool = "0.10.0"
deadpool-postgres = "0.12.1"
# deadpool-redis = "0.14.0"
tokio-util = "0.7.10"
tokio-postgres = "0.7.10"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"

jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
base64 = "0.22.0"

pbkdf2 = "0.12.2"
data-encoding = "2.5.0"
ring = "0.17.8"

# headers = "0.4.0"
# axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = "0.4.35"

# hyper = { version = "1.2.0", features = ["client", "http2"] }
# hyper-proxy = "0.9.1"

# burn = "0.12.1"
# plotters = "0.3.5"

# redis = "0.25.2"

# bb8 = "0.8.3"
# bb8-postgres = "0.8.1"
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# parking_lot = "0.12.1"

# actix-web = "4"
# actix-rt = "2.9.0"
# deadpool-postgres="0.12.1"
# tokio-postgres="0.7.10"